# operatordb

./: .gitignore  Info.plist  Makefile.in  README.md  configure  configure.in  db.php-example  generate_source_from_db.php  make_framework.sh  operatordb.c  operatordb.h  operatordb.pc  operatordb.php  showop.c  ts25.sql
